--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @import "tailwindcss";
 @plugin 'tailwind-scrollbar';
 @import 'tailwind-scrollbar-hide/v4';
+@plugin "daisyui";
 
 @theme {
     --font-roboto: "Roboto", "sans-serif";
