added btn blue and btn green colors

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,8 @@
     --color-sideBarBg: #1c2655;
     --color-sideBarIconBg: #222c65;
     --color-sideBarIconActiveBg: #0088ff;
+    --color-btnBlue:#55b0ff;
+    --color-btnGreen:#0ebc6b;
     --color-headerBg: #2e3b61;
     --color-outletBg: #edf0f4;
     --color-neumorphicBg: #f0f0f3;
